<resources>
    <!--    Main Activity & Manifest -->
    <string name="app_name">WelnessMind</string>
    <string name="app_header">Welness Mind</string>
    <string name="app_logo">App Logo</string>

    <!--    Home Activity -->
    <string name="tela_inicial">Tela Inicial</string>
    <string name="primeiro_acesso">Primeiro Acesso?</string>
    <string name="btn_cadastro">Realize seu Cadastro</string>
    <string name="possui_conta">Já possui uma conta?</string>
    <string name="login_message">Faça o login abaixo</string>
    <string name="btn_login">Entrar</string>

    <!--    Conditional Activity -->
    <string name="conditional_screen">Como vai usar o app?</string>
    <string name="decision_paciente">Está procurando suporte e \n orientações?</string>
    <string name="btn_paciente">Toque aqui para seguir</string>
    <string name="btn_profissional">Registrar credenciais</string>
    <string name="decision_profissional">Para profissionais da saúde:</string>

    <!--    Conditional Activity 2 -->
    <string name="btn_profissional2">Entre aqui</string>


    <!--    Cadastro Usuário -->
    <string name="registerPaciente">Cadastro Paciente</string>
    <string name="subscriber_Title">Cadastro de Usuário</string>
    <string name="registerUser">Usuário</string>
    <string name="nome">Nome Completo</string>
    <string name="email">E-mail</string>
    <string name="documento_user">CPF (apenas números)</string>
    <string name="estado_civil">Estado Civil: </string>
    <string name="rb_state5">Viúvo(a)</string>
    <string name="rb_state4">Divorciado(a)</string>
    <string name="rb_state3">Separado(a)</string>
    <string name="rb_state2">Casado(a)</string>
    <string name="rb_state1">Solteiro(a)</string>
    <string name="idade_user">Idade</string>
    <string name="renda_familiar">Renda Familiar: </string>
    <string name="rb_renda1">Até 2 S.M.</string>
    <string name="rb_renda2">De 2 a 4 S.M.</string>
    <string name="rb_renda3">De 4 a 7 S.M.</string>
    <string name="rb_renda4">+7 S.M.</string>
    <string name="escolaridade">Escolaridade</string>
    <string name="ensino_fundamental">Ensino Fundamental</string>
    <string name="ensino_medio">Ensino Médio</string>
    <string name="ensino_superior">Ensino Superior</string>
    <string name="pos_graduacao">Pós-graduação</string>
    <string name="login_text">Já tenho uma conta</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="professional_error_to_insert">Ocorreu um erro ao cadastrar o profissional</string>

    <!--    Cadastro Profissional -->
    <string name="registerProfessional">Cadastro Profissional</string>
    <string name="num_registro">CRP (apenas números)</string>
    <string name="especialidade">Especialidade</string>
    <string name="patient_error_to_insert">Ocorreu um erro ao cadastrar o paciente</string>

    <!--    Login -->
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bem-vindo! "</string>
    <string name="invalid_username">Não é um usuário válido</string>
    <string name="password_generation_failed">A geração de senha falhou</string>
    <string name="invalid_password">A senha deve ter mais de 8 caracteres</string>
    <string name="email_conflict_error">O email já está sendo utilizado por outro usuário.</string>
    <string name="login_failed">Login falhou</string>
    <string name="invalid_password_error">Senha inválida</string>
    <string name="cadastrar">Não tenho uma conta</string>

    <!--    Formulário -->
    <string name="bem_vindo">Seja Bem Vindo!</string>
    <string name="forms_note">Aqui você irá preencher um breve formulário para nos auxiliar a  entender um pouco da sua rotina!</string>
    <string name="btn_avancar">Avançar</string>
    <string name="tv_forms_sono">1. Quantas horas de sono você teve ontem?*</string>
    <string name="tv_forms_estudo">2. Quantas horas de estudo por dia, em média?*</string>
    <string name="hint_forms_sono">Digite apenas o número (ex: 6)</string>
    <string name="hint_forms_estudo">Digite apenas o número (ex: 4)</string>
    <string name="tv_forms_trabalho">3. Quantas horas de trabalho por dia?*</string>
    <string name="hint_forms_trabalho">Digite apenas o número (ex: 9)</string>
    <string name="tv_forms_atividadeFisica">4. Faz alguma atividade física?*</string>
    <string name="rb_yes">Sim</string>
    <string name="rb_no">Não</string>
    <string name="tv_forms_atividadeFisica2">5. Se sim, qual(is)?</string>
    <string name="tv_forms_atividadeFisica3">6. Com qual frequência?</string>
    <string name="hint_forms_atividadeFisica3">(Ex: 1x por semana, todos os dias…)</string>
    <string name="tv_forms_hobbies">7. Quais são seus hobbies?</string>
    <string name="hint_forms_hobbies">(música, jogos, passeio, etc.)</string>
    <string name="tv_forms_medicamento">8. Toma algum medicamento ou suplemento?*</string>
    <string name="tv_forms_medicamento2">9. Em caso afirmativo, descreva-os abaixo:</string>
    <string name="forms_error_to_insert">Ocorreu um erro ao registrar o formulário</string>
    <string name="forms">Formulário</string>

    <!-- Lista de Profissionais  -->
    <string name="professionals_list">Lista de Profissionais</string>

    <!--    Registro do consultório e perfil do profissional -->
    <string name="marcar_consulta">Marcar Consulta</string>
    <string name="info_home">Clique na casa ao lado\npara ver os seus \nindicadores de saúde</string>
    <string name="info_register_office">Clique no mapa ou digite no campo abaixo para selecionar a localização do consultório</string>
    <string name="office_note">Aqui você pode cadastrar o \nconsultório no qual trabalha,\ncolocar uma descrição, e\nregistrar informações para \ncontato</string>
    <string name="tv_office_description">descrição</string>
    <string name="tv_contato">Contato:</string>
    <string name="hint_contato">*Essa informação será exibida aos pacientes</string>
    <string name="office_register">Registro de consultório</string>
    <string name="location_saved_successfully">Localização salva com sucesso</string>
    <string name="location_error_to_save">Ocorreu um erro ao salvar a localização</string>
    <string name="location_error_to_fetch">Ocorreu um erro ao buscar o endereço</string>
    <string name="hint_insert_address">Insira o endereço</string>
    <string name="professionalProfile">Perfil do Profissional</string>

<!--    Home do usuário -->
    <string name="nav_consultas">Consultas</string>
    <string name="nav_forms">Formulário</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_professionalsList">Profissionais</string>
    <string name="btn_salvar">Salvar</string>
    <string name="user_home">Perfil do usuário</string>

</resources>
