<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/welness_mind_logo" />

        <TextView
            android:id="@+id/user_header"
            style="@style/header"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/registerUser"
            android:textColor="@color/black" />
    </LinearLayout>

    <EditText
        android:id="@+id/user_nome"
        android:maxLength="50"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColorHint="@color/royal_blue" />

    <EditText
        android:id="@+id/user_email"
        android:maxLength="30"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/royal_blue" />

    <EditText
        android:id="@+id/user_document"
        android:maxLength="11"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/documento_user"
        android:importantForAutofill="no"
        android:inputType="number|numberSigned"
        android:textColorHint="@color/royal_blue" />

    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/estado_civil"
            android:layout_margin="16dp"
            style="@style/paragraph"
            android:textColor="@color/royal_blue" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3">

            <RadioButton
                android:id="@+id/rb_solteiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_state1"
                android:layout_columnSpan="1" />

            <RadioButton
                android:id="@+id/rb_casado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_state2"
                android:layout_columnSpan="1" />

            <RadioButton
                android:id="@+id/rb_separado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_state3"
                android:layout_columnSpan="1" />

            <RadioButton
                android:id="@+id/rb_divorciado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_state4"
                android:layout_columnSpan="1" />

            <RadioButton
                android:id="@+id/rb_viuvo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_state5"
                android:layout_columnSpan="1" />
        </GridLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_idade"
            android:maxLength="2"
            android:inputType="number"
            style="@style/paragraph"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/idade_user"
            android:textColorHint="@color/royal_blue" />

        <TextView
            style="@style/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/renda_familiar"
            android:textColor="@color/royal_blue" />

    </LinearLayout>

    <GridLayout
        android:layout_marginStart="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <RadioButton
            android:id="@+id/rb_renda1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_renda1"
            android:layout_columnSpan="1" />

        <RadioButton
            android:id="@+id/rb_renda2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_renda2"
            android:layout_columnSpan="1" />

        <RadioButton
            android:id="@+id/rb_renda3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_renda3"
            android:layout_columnSpan="1" />

        <RadioButton
            android:id="@+id/rb_renda4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_renda4"
            android:layout_columnSpan="1" />

    </GridLayout>

    <TextView
        style="@style/paragraph"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/royal_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolaridade" />

    <GridLayout
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <RadioButton
            android:id="@+id/rb_escolaridade1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ensino_fundamental"
            android:layout_columnSpan="1" />

        <RadioButton
            android:id="@+id/rb_escolaridade2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ensino_medio"
            android:layout_columnSpan="1" />

        <RadioButton
            android:id="@+id/rb_escolaridade3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ensino_superior"
            android:layout_columnSpan="1" />

        <RadioButton
            android:id="@+id/rb_escolaridade4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pos_graduacao"
            android:layout_columnSpan="1" />

    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_login"
            android:layout_marginStart="48dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:text="@string/login_text"
            android:textColor="@color/royal_blue"
            android:textSize="16sp"
            style="@style/Widget.AppCompat.EditText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_cadastroUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:background="@drawable/button"
            android:text="@string/btn_cadastrar"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</ScrollView>