<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/user_header"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/bem_vindo"
            style="@style/bem_vindo"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="6dp"
            android:text="@string/btn_avancar"/>

    </RelativeLayout>
    <TextView
        android:layout_width="180dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        android:text="@string/forms_note"
        android:shadowColor="#CD000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/tv_forms_sono"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="36dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_sono"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:hint="@string/hint_forms_sono" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/tv_forms_estudo"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="36dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_estudo"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:hint="@string/hint_forms_estudo"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/tv_forms_trabalho"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="36dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_forms_trabalho">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_trabalho"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_height="30dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/tv_forms_atividadeFisica"
        android:textSize="16sp"/>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="36dp"
          android:text="@string/rb_yes"/>

      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:text="@string/rb_no"/>
  </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/tv_forms_atividadeFisica2"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="36dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_atividadeFisica2"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/tv_forms_atividadeFisica3"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="36dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_atividadeFisica3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/hint_forms_atividadeFisica3"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/tv_forms_hobbies"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="36dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_hobbies"
            android:hint="@string/hint_forms_hobbies"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/tv_forms_medicamento"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/rb_yes"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/rb_no"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/tv_forms_medicamento2"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="36dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_medicamento2"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
    </com.google.android.material.textfield.TextInputLayout>



</LinearLayout>
</ScrollView>