<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/welness_mind_logo" />

        <TextView
            android:id="@+id/user_header"
            style="@style/header"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/registerProfessional"
            android:textColor="@color/black" />
    </LinearLayout>

    <EditText
        android:maxLength="50"
        android:id="@+id/professional_nome"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/royal_blue" />

    <EditText
        android:maxLength="30"
        android:id="@+id/professional_email"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/royal_blue" />

    <EditText
        android:maxLength="10"
        android:id="@+id/num_registro"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/num_registro"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/royal_blue" />

    <EditText
        android:maxLength="20"
        android:id="@+id/especialidade"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/especialidade"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/royal_blue" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:text="@string/login_text"
            android:textColor="@color/royal_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_cadastroPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:text="@string/btn_cadastrar"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>