<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="165dp"
        android:layout_height="144dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welness_mind_logo" />

    <TextView
        android:id="@+id/decision_paciente"
        style="@style/paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/primeiro_acesso"
        android:textColor="@color/royal_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <Button
        android:id="@+id/btn_cadastro"
        style="@style/paragraph"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/btn_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decision_paciente" />

    <TextView
        android:id="@+id/decision_profissional"
        style="@style/paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/possui_conta"
        android:textColor="@color/royal_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cadastro" />

<!--    TODO pegar a font family Open Sans Hebrew-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/decision_profissional"
        android:text="@string/login"
        style="@style/paragraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_profissional"
        style="@style/paragraph"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="42dp"
        android:text="@string/btn_login"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decision_profissional"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="387dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>